# Jazzear

./: .gitignore  CLAUDE.md  Cargo.toml  Gemfile  README.md  clippy.toml  deny.toml  justfile  rust-toolchain.toml
.claude/: settings.json
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: check_doc_links.py
.github/workflows/: ci.yml  release-testflight.yml
crates/changes-core/: Cargo.toml
crates/changes-core/src/: app.rs  lib.rs  test_support.rs
crates/changes-core/src/session/: mod.rs  scores.rs
crates/changes-core/src/theory/: cadence.rs  resolution.rs
crates/changes-ffi/: Cargo.toml
crates/changes-ffi/src/: ffi.rs  lib.rs
design/: Changes - Direction Take.dc.html  Pocket Session Flow.dc.html  README.md
docs/: CONCEPT.md  DESIGN_BRIEF.md  RELEASING.md  roadmap.md
docs/specs/: answer-input.md  mvp-plan.md
fastlane/: Appfile  Fastfile  Matchfile
ios/: project.yml
ios/Changes/: ChangesApp.swift
ios/Changes/Core/: CoreBridge.swift  LiveBridge.swift  Store.swift
ios/Changes/DesignSystem/: ChangesFonts.swift  Theme.swift
ios/Changes/Views/: RootView.swift
ios/Changes/Views/Components/: PickerGrid.swift  SessionComponents.swift
ios/ChangesTests/: RootViewSnapshotTests.swift
scripts/: ios-run-sim.sh
