[workspace]
members = ["crates/changes-core", "crates/changes-ffi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
# Mirrors the strictest dependency MSRV (crux_core 0.19 requires 1.90);
# clippy::incompatible_msrv enforces it via -D warnings.
rust-version = "1.90"
publish = false

[workspace.dependencies]
crux_core = "0.19"
# Must track the facet version crux_core 0.19 pulls in (0.44.x) so the
# gated `derive(facet::Facet)` impls match crux's typegen reflection
# (see .github/dependabot.yml).
facet = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ulid = "2"
chrono = { version = "0.4", features = ["serde"] }
# SRS scheduler (BSD-3, burn-free since 6.3 — docs/specs/srs-persistence.md
# decision 2). Wrapped behind core's Scheduler trait; never on the bridge.
fsrs = "6.6"
bincode = "1"

changes-core = { path = "crates/changes-core" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
# CLAUDE.md: no unwrap() without written justification. Per-site escapes use
# #[allow(clippy::unwrap_used)] plus a WHY comment. Tests are exempt via
# clippy.toml (allow-unwrap-in-tests).
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

[profile.dev.package."*"]
debug = false

[profile.dev]
debug = "line-tables-only"
