[package]
name = "changes-core"
description = "Pure Crux core for Changes — all logic, no I/O"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
# Enables facet reflection on the FFI-boundary types so the native iOS
# bridge's typegen (crux_core::type_generation::facet) can emit Swift types.
facet_typegen = ["dep:facet", "crux_core/facet_typegen"]

[dependencies]
crux_core = { workspace = true }
serde = { workspace = true }
facet = { workspace = true, optional = true }

[dev-dependencies]
# The FFI bridge is positional bincode (non-self-describing); every
# bridge-crossing type gets a bincode round-trip test (intrada #846).
bincode = { workspace = true }

[lints]
workspace = true
